# cplusplus-quark-store

./: CMakeLists.txt  QuarkStore  README.md  main.cpp
Enum/: Quality.hpp
Interface/: IView.hpp
Model/: Clothes.cpp  Clothes.hpp  Quote.cpp  Quote.hpp  Seller.cpp  Seller.h  Seller.hpp  Store.cpp  Store.hpp
Model/Clothes/: Pant.cpp  Pant.hpp  Shirt.cpp  Shirt.hpp
Presentation/: Presentation.cpp  Presentation.hpp
View/: View.cpp  View.hpp
